# Eventify

./: .env  .firebaserc  .gitignore  .replit  FinalAttendee.csv  NFTStorage.mjs  README.md  Web3.py  certificate.py  certificate1.py  certificate2.py  certificate3.py  config.txt  csvimportfromjson.py  emailList.csv  excel1.xlsx  firebasestorage.py  mailing.py  main.py  nftstorage.js  package-lock.json  package.json  participantList.csv  pyproject.toml  requirements.txt  sample.py  server.py  serviceAccountKey.json  test.py  versel.json
.firebase/: hosting.dGVtcGxhdGVz.cache
Form/: BannerifyForm.jsx  EventForm.jsx  RegistrationFrom.jsx
api/: api.js
banners/: banner1.py  banner2.py  banner3.py
certificates/: certificate1.py  certificate2.py  certificate3.py
client/: package-lock.json  package.json  tailwind.config.js
client/config/: paths.js  webpack.config.js
client/public/: index.html
client/src/: App.js  constant.js  index.js
instance/: eventlabs.db
pastry/: pastetrail.py  removebg.py
static/: asset-manifest.json
static/css/: main.1898b7a0.css  main.1898b7a0.css.map  main.5e9e4192.css  main.5e9e4192.css.map  main.84cb92e9.css  main.84cb92e9.css.map  main.988703fc.css  main.988703fc.css.map  main.cb00cd7a.css  main.cb00cd7a.css.map
static/js/: main.79be2480.js  main.817f6447.js  main.87be6ab2.js  main.b6fc6494.js  (+5 more)
templates/: CheckIn.html  Organizer.html  PartiReg.html  banner.html  certificates.html  checkout.html  eventdetails.html  index.html  templates.html  tickets.html
tickets/: ticket1.py  ticket2.py  ticket3.py
web3/: web3.py
(+64 files in other folders)
