[tool.poetry]
name = "repl_nix_Eventify"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.21.0"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Js2Py = "^0.74"
Pillow = "^9.4.0"
Pyrebase = "^3.0.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
